# ocenpbx

./: install.sh
resources/: cert-forensics-tools-release-el7.rpm.1  config.sh  postgresql.sh  prosody.sh  switch.sh
resources/config/autoload_configs/: switch.conf.xml
resources/switch/: conf-copy.sh  source-master.sh  source-release.sh
resources/switch/config/: freeswitch.serial  vars.xml
resources/switch/config/autoload_configs/: callcenter.conf.xml  cdr_pg_csv.conf.xml  db.conf.xml  event_socket.conf.xml  fifo.conf.xml  lcr.conf.xml  modules.conf.xml  voicemail.conf.xml
resources/switch/config/dialplan/: default.xml
resources/switch/config/sip_profiles/: external.xml  internal-ipv6.xml  internal.xml
resources/switch/freeswitch/: configure.ac
resources/switch/freeswitch/scripts/lua/: gen_conference.lua  gen_directory.lua
resources/switch/freeswitch/src/mod/asr_tts/mod_asr/: Makefile.am  mod_asr.cpp
resources/switch/lua/: gen_conference.lua  gen_dialplan.lua  priority.lua
